# webassembly_benchmark

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  package-lock.json  webpack.config.js
src/: app.rs  entries.rs  lib.rs  random_words.rs
static/: index.html  styles.css
